<resources>
    <string name="app_name">audiobook</string>
    <string name="over_10_000_book_titles_at_your_fingertips">Over 10,000 book titles at your fingertips!</string>
    <string name="readaudio">ReadAudio</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_this_account">Remember this account</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="birthday">Birthday</string>
    <string name="dob">Dob</string>
    <string name="create_user">Create user</string>
    <string-array name="gender_array">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>
</resources>